# ACIT4630-exam

./: .env.example  .gitignore  README.md  oskar.README.md  oskar.runs.md  pyproject.toml  run_pipeline.sh  streamlit_app.py  tek17.conf
.github/workflows/: main.yml
analysis/: eval_refusal.py  eval_retrieval.py  refusal_analysis.py
analysis/logging/: rag_queries.jsonl  refusal_benchmark_ollama_llama3.2_dense_top6_t0_20260330_121714_01.jsonl  refusal_benchmark_openai_gpt-4.1-mini_dense_top6_t0_20260330_121714_02.jsonl  refusal_benchmark_openai_gpt-5.2_dense_top6_t0_20260330_121714_03.jsonl  refusal_benchmark_summary_20260330_121714.csv  refusal_ollama_llama3.2_baseline_t0_top14_dense_20260430_195350_001.jsonl  refusal_ollama_llama3.2_baseline_t0_top14_hybrid_a0.5_20260430_195350_002.jsonl  refusal_ollama_llama3.2_baseline_t0_top14_sparse_20260430_195350_003.jsonl  refusal_ollama_llama3.2_baseline_t0_top6_dense_20260411_184116_001.jsonl  refusal_ollama_llama3.2_baseline_t0_top6_dense_20260430_193317_001.jsonl  refusal_ollama_llama3.2_baseline_t0_top6_hybrid_a0.5_20260430_193317_002.jsonl  refusal_ollama_llama3.2_baseline_t0_top6_sparse_20260430_193317_003.jsonl  refusal_ollama_llama3.2_relaxed_t0_top6_hybrid_a0.5_20260430_202132_001.jsonl  refusal_ollama_llama3.2_strict_t0_top6_hybrid_a0.5_20260430_202132_002.jsonl  refusal_openai_gpt-4.1-mini_baseline_t0_top6_hybrid_a0.25_20260430_203648_001.jsonl  refusal_openai_gpt-4.1-mini_baseline_t0_top6_hybrid_a0.5_20260430_203648_002.jsonl  refusal_openai_gpt-4.1-mini_baseline_t0_top6_hybrid_a0.75_20260430_203648_003.jsonl  (+6 more)
(+54 files in other folders)
